--- a/Prayer/newStyle.css
+++ b/Prayer/newStyle.css
@@ -28,7 +28,7 @@ body {
 .container {
   width: auto;
   max-width: 900px;
-  /* padding: 20px 30px; */
+  padding: 20px 5px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 0 10px 10px 10px rgb(0, 0, 0, 0.2);
@@ -37,12 +37,36 @@ body {
 
 .box {
   /* display: flex; */
-  padding: 30px;
+  padding: 10px;
   text-align: center;
   font-size: 20px;
   color: #5e5454;
   /* color: #f3f3f3; */
   margin: 10px;
+}
+
+.prayer-container {
+  display: flex;
+  padding: 5px;
+  text-align: center;
+  font-size: 1.1rem;
+  color: #5e5454;
+  /* color: #f3f3f3; */
+  margin: 1rem;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+.time-container {
+  display: flex;
+  padding: 5px;
+  text-align: center;
+  font-size: 1.1rem;
+  color: #5e5454;
+  /* color: #f3f3f3; */
+  margin: 1rem;
+  justify-content: space-between;
+  /* align-items: center; */
 }
 
 .box-1 {
