--- a/Prayer/newStyle.css
+++ b/Prayer/newStyle.css
@@ -36,7 +36,7 @@ body {
 }
 
 .box {
-  /* display: flex; */
+  display: flex;
   padding: 10px;
   text-align: center;
   font-size: 20px;
@@ -75,21 +75,27 @@ body {
 }
 .box-2 {
   background: #d9d9d9;
+  justify-content: space-between;
 }
 .box-3 {
   background: #a3debe;
+  justify-content: space-between;
 }
 .box-4 {
   background: #b5d7b2;
+  justify-content: space-between;
 }
 .box-5 {
   background: #e9ffe8;
+  justify-content: space-between;
 }
 .box-6 {
   background: #b5d7b2;
+  justify-content: space-between;
 }
 .box-7 {
   background: #e9ffe8;
+  justify-content: space-between;
 }
 .box-8 {
   background: #b5d7b2;
