--- a/Prayer/style.css
+++ b/Prayer/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .box-1 {
-  background: #BCEBB0;
+  background: #bcebb0;
 }
 .box-2 {
   background: #33ba2e;
@@ -28,4 +28,10 @@ body {
 }
 .box-5 {
   background: #9ea141;
+}
+
+.time {
+  display: flex;
+  text-align: center;
+  color: Red;
 }
