--- a/Prayer/test.css
+++ b/Prayer/test.css
@@ -17,94 +17,35 @@ body {
   /* background-repeat: no-repeat; */
   color: #000;
   font-family: Montserrat, san-serif;
-  text-align: center;
-  display: flex;
+  /* text-align: center; */
+  /* display: flex; */
   /* aligning vertically */
-  align-items: center;
+  /* align-items: center; */
   /* align horizontally */
-  justify-content: center;
+  /* justify-content: center; */
 }
 
-.container {
-  width: auto;
-  max-width: 900px;
-  padding: 20px 5px;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.6);
-  box-shadow: 0 10px 10px 10px rgb(0, 0, 0, 0.2);
-  /* border: 1px solid red; */
-}
-
-.box {
+.flex {
   display: flex;
-  padding: 10px;
+  font-size: 30px;
   text-align: center;
-  font-size: 20px;
-  color: #5e5454;
-  /* color: #f3f3f3; */
+  background-color: #7d7d7d;
+  color: #000000;
+  font-weight: bold;
+  justify-content: space-evenly;
+}
+/* .flex2 {
+  justify-content: space-around;
+} */
+.flex3 {
+  justify-content: space-between;
+}
+.flex-items {
+  background-color: #cccaca;
+  width: 90px;
+  height: 60px;
   margin: 10px;
-}
-
-.prayer-container {
-  display: flex;
-  /* padding: 5px; */
   text-align: center;
-  flex-wrap: nowrap;
-  font-size: 1.1rem;
-  color: #5e5454;
-  /* color: #f3f3f3; */
-  margin: 1rem;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.time-container {
-  display: flex;
-  padding: 5px;
-  text-align: center;
-  font-size: 1.1rem;
-  color: #5e5454;
-  /* color: #f3f3f3; */
-  /* width: 100px; */
-  margin: 1rem;
-  /* border: 1px solid red; */
-  /* justify-content: space-between; */
-  align-items: center;
-}
-
-.box-1 {
-  background: #bcebb0;
-  color: #5e5454;
-}
-.box-2 {
-  background: #d9d9d9;
-  justify-content: space-between;
-}
-.box-3 {
-  background: #a3debe;
-  justify-content: space-between;
-}
-.box-4 {
-  background: #b5d7b2;
-  justify-content: space-between;
-}
-.box-5 {
-  background: #e9ffe8;
-  justify-content: space-between;
-}
-.box-6 {
-  background: #b5d7b2;
-  justify-content: space-between;
-}
-.box-7 {
-  background: #e9ffe8;
-  justify-content: space-between;
-}
-.box-8 {
-  background: #b5d7b2;
-  justify-content: space-between;
-}
-.box-9 {
-  background: #b5d7b2;
-  justify-content: space-between;
+  font-size: 40px;
+  line-height: 1.5;
 }
