--- a/Prayer/test.css
+++ b/Prayer/test.css
@@ -41,10 +41,10 @@ body {
   justify-content: space-between;
 }
 .flex-items {
-  background-color: #cccaca;
+  /* background-color: #cccaca; */
   width: 90px;
   height: 60px;
-  margin: 10px;
+  /* margin: 10px; */
   text-align: center;
   font-size: 40px;
   line-height: 1.5;
