--- a/Prayer/newStyle.css
+++ b/Prayer/newStyle.css
@@ -5,51 +5,72 @@
 html {
   /* preventing padding from adding extra length and width to the page - so we don't have the horizontal line */
   box-sizing: border-box;
+  background-image: url(bg2.jpg);
 }
 
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%23121516' fill-opacity='0.08' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
-  /* background-image: url(bg1.jpg); */
+  background-image: url(bg2.jpg);
   /* background-position: center; */
-  /* background-repeat: no-repeat; */
-  color: #000;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #5e5b5b;
   font-family: Montserrat, san-serif;
   text-align: center;
   display: flex;
+  flex-direction: column;
   /* aligning vertically */
   align-items: center;
   /* align horizontally */
-  justify-content: center;
+  justify-content: space-around;
+}
+.top-control,
+p {
+  display: flex;
+  flex-direction rttt: row;
+  justify-content: space-between;
+  /* margin: 10px; */
+  /* border: 1px solid red; */
+  width: auto;
+  max-width: 700px;
+  padding: 10px 5px;
+
+  /* flex-direction: column; */
+  /* align-items: baseline; */
+  /* color: Red; */
+  /* justify-content: center; */
+}
+
+.bg-image {
+  background-image: url(bg2.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
   width: auto;
-  max-width: 900px;
-  padding: 20px 5px;
+  max-width: 700px;
+  padding: 10px 5px;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: #ffffffa8;
+  /* background-color: rgba(255, 255, 255, 0.952); */
   box-shadow: 0 10px 10px 10px rgb(0, 0, 0, 0.2);
-  /* border: 1px solid red; */
+  /*border: 1px solid red;
+  */
 }
 
 .box {
-  /* display: flex; */
-  /* //padding: 10px; */
-  /* text-align: end; */
-  font-size: 20px;
+  display: flex;
+  padding: 5px;
+  text-align: end;
+  /* font-size: 20px; */
   color: #5e5454;
   /* color: #f3f3f3; */
-  /* margin: 10px; */
-}
-
-.box,
-h2 {
-  color: Red;
-  text-align: center;
-  flex-basis: 13%;
+  margin: 10px;
 }
 
 .prayer-container {
@@ -57,7 +78,7 @@ h2 {
   /* padding: 5px; */
   text-align: center;
   flex-wrap: nowrap;
-  font-size: 1.1rem;
+  /* font-size: 1.1rem; */
   color: #5e5454;
   /* color: #f3f3f3; */
   margin: 1rem;
@@ -65,53 +86,47 @@ h2 {
   align-items: center;
 }
 
-.time-container {
-  display: flex;
-  padding: 5px;
+.grid-container {
+  /* border: 1px solid blue; */
+
+  display: grid;
+  grid-template-columns: auto auto auto;
+  /* padding: 10px; */
   text-align: center;
-  font-size: 1.1rem;
-  color: #5e5454;
-  /* color: #f3f3f3; */
-  width: 100px;
-  margin: 1rem;
-  /* border: 1px solid red; */
-  justify-content: space-between;
-  align-items: center;
+  padding: 0;
 }
 
-.box-1 {
-  background: #bcebb0;
-  color: #5e5454;
+.grid-item {
+  /* border: 1px solid black; */
+  padding: 0rem;
+  margin: 1px 0rem;
+  text-align: center;
 }
-.box-2 {
-  background: #d9d9d9;
-  justify-content: space-between;
+
+.box-header {
+  background: #ffcd985e;
+  /* color: #5e5b5b; */
+  /* text-emphasis: bold; */
+  /* font-weight: bold; */
+  padding: 10px 0px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
-.box-3 {
-  background: #a3debe;
-  justify-content: space-between;
+
+.item-box {
+  /* background: #ffffff; */
+  border-bottom: 1px solid #9a9a9a;
+  padding-bottom: 20px;
+  /* margin-top: 1rem; */
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-.box-4 {
-  background: #b5d7b2;
-  justify-content: space-between;
-}
-.box-5 {
-  background: #e9ffe8;
-  justify-content: space-between;
-}
-.box-6 {
-  background: #b5d7b2;
-  justify-content: space-between;
-}
-.box-7 {
-  background: #e9ffe8;
-  justify-content: space-between;
-}
-.box-8 {
-  background: #b5d7b2;
-  justify-content: space-between;
-}
-.box-9 {
-  background: #b5d7b2;
-  justify-content: space-between;
+
+.last-item {
+  /* background: #ffffff; */
+  /* border-bottom: 1px solid #9a9a9a; */
+  padding-bottom: 10px;
+  /* margin-top: 1rem; */
+  margin-top: 1rem;
+  /* margin-bottom: 1rem; */
 }
